[package]
name = "mybindgen"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["frank gzhu <gzhuflyer@foxmai.com>"]
description = "A bzlib for rust call C language"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
bindgen = "0.53.1"
